--- a/web-tester-product/pom.xml
+++ b/web-tester-product/pom.xml
@@ -12,6 +12,8 @@
   <artifactId>web-tester-product</artifactId>
   <version>10.0.17-SNAPSHOT</version>
   <packaging>pom</packaging>
+  
+  <name>web-tester-product</name>
 
   <build>
     <plugins>
