--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
   <version>13.1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
+  <name>web-module</name>
+
   <modules>
     <module>maven-config</module>
     <module>primeui-tester</module>
