XIVY-16780 wait 4 manual release confirmation

--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -39,7 +39,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <autoRelease>true</autoRelease>
+    <autoRelease>false</autoRelease>
     <skip.gpg>true</skip.gpg>
   </properties>
 
