--- a/web-tester-product/pom.xml
+++ b/web-tester-product/pom.xml
@@ -4,13 +4,13 @@
   <parent>
     <groupId>com.axonivy.ivy.webtest</groupId>
     <artifactId>web-config</artifactId>
-    <version>13.2.0-SNAPSHOT</version>
+    <version>13.2.0</version>
     <relativePath>../maven-config</relativePath>
   </parent>
 
   <groupId>com.axonivy.ivy.webtest</groupId>
   <artifactId>web-tester-product</artifactId>
-  <version>13.2.0-SNAPSHOT</version>
+  <version>13.2.0</version>
   <packaging>pom</packaging>
   
   <name>web-tester-product</name>
