--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -40,6 +40,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <skip.gpg>true</skip.gpg>
+    <skip.publishing>false</skip.publishing>
   </properties>
 
   <distributionManagement>
@@ -215,6 +216,7 @@
               <publishingServerId>central.snapshots</publishingServerId>
               <autoPublish>true</autoPublish>
               <waitUntil>published</waitUntil>
+              <skipPublishing>${skip.publishing}</skipPublishing>
             </configuration>
           </plugin>
         </plugins>
@@ -236,6 +238,7 @@
               <publishingServerId>central.releases</publishingServerId>
               <autoPublish>${autoRelease}</autoPublish>
               <waitUntil>published</waitUntil>
+              <skipPublishing>${skip.publishing}</skipPublishing>
             </configuration>
           </plugin>
         </plugins>
