XIVY-16780 do not publish modules

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,9 @@
   <version>13.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>web-module</name>
+  <properties>
+    <skip.publishing>true</skip.publishing>
+  </properties>
 
   <modules>
     <module>maven-config</module>
@@ -22,16 +24,4 @@
     <module>unit-tester</module>
   </modules>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <version>3.1.4</version>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
