--- a/web-tester-fixture/pom.xml
+++ b/web-tester-fixture/pom.xml
@@ -61,7 +61,7 @@
   <pluginRepositories>
     <!-- Used to install project-build-plugin -->
     <pluginRepository>
-      <id>central.snapshots</id>
+      <id>central.sonatype.snapshots</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
       <releases>
         <enabled>false</enabled>
