--- a/web-tester-fixture/pom.xml
+++ b/web-tester-fixture/pom.xml
@@ -62,7 +62,7 @@
     <!-- Used to install project-build-plugin -->
     <pluginRepository>
       <id>central.sonatype.snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
       <releases>
         <enabled>false</enabled>
       </releases>
