--- a/web-tester-fixture/pom.xml
+++ b/web-tester-fixture/pom.xml
@@ -43,8 +43,8 @@
   <pluginRepositories>
     <!-- Used to install project-build-plugin -->
     <pluginRepository>
-      <id>central.snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <id>central.sonatype.snapshots</id>
+      <url>https://central.sonatype.com/repository/maven-snapshots</url>
       <releases>
         <enabled>false</enabled>
       </releases>
