--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -45,7 +45,7 @@
 
   <distributionManagement>
     <snapshotRepository>
-      <id>central.sonatype.snapshots</id>
+      <id>central.snapshots</id>
       <name>Maven Central Snapshots Repo</name>
       <url>https://central.sonatype.com/repository/maven-snapshots/</url>
     </snapshotRepository>
