--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -218,7 +218,7 @@
             <configuration>
               <publishingServerId>central.releases</publishingServerId>
               <autoPublish>${autoRelease}</autoPublish>
-              <waitUntil>published</waitUntil>
+              <waitUntil>uploaded</waitUntil>
               <skipPublishing>${skip.publishing}</skipPublishing>
             </configuration>
           </plugin>
