Exclude more artifacts

--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -221,6 +221,8 @@
               <waitUntil>uploaded</waitUntil>
               <skipPublishing>${skip.publishing}</skipPublishing>
               <excludeArtifacts>
+                <excludeArtifact>web-config</excludeArtifact>
+                <excludeArtifact>web-module</excludeArtifact>
                 <excludeArtifact>web-tester-fixture</excludeArtifact>
                 <excludeArtifact>web-test-module</excludeArtifact>
               </excludeArtifacts>
