--- a/web-tester-fixture/pom.xml
+++ b/web-tester-fixture/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>com.axonivy.ivy.webtest</groupId>
   <artifactId>web-tester-fixture</artifactId>
-  <version>13.1.1</version>
+  <version>13.1.2-SNAPSHOT</version>
   <packaging>iar-integration-test</packaging>
   <properties>
     <project.build.plugin.version>13.1.0</project.build.plugin.version>
