--- a/web-tester-fixture/pom.xml
+++ b/web-tester-fixture/pom.xml
@@ -17,8 +17,9 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>com.axonivy.ivy.webtest</groupId>
-      <artifactId>web-tester</artifactId>
+      <groupId>com.axonivy.ivy.api.test</groupId>
+      <artifactId>ivy-web-test-api</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.axonivy.ivy.api</groupId>
