--- a/web-tester/pom.xml
+++ b/web-tester/pom.xml
@@ -28,5 +28,15 @@
       <artifactId>jersey-client</artifactId>
       <version>2.47</version>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
