--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <module>primeui-tester</module>
     <module>web-tester</module>
     <module>web-tester-product</module>
-    <module>unit-tester</module>
+    <module>test-bom</module>
   </modules>
 
 </project>
