--- a/test-bom/.project
+++ b/test-bom/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>unit-tester</name>
+	<name>test-bom</name>
 	<comment></comment>
 	<projects>
 	</projects>
