--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -33,8 +33,8 @@
   <url>https://github.com/axonivy/web-tester</url>
 
   <organization>
-    <name>The open source community of Axon Ivy</name>
-    <url>https://github.com/ivy-supplements</url>
+    <name>Axon Ivy - digitalize your business</name>
+    <url>https://github.com/axonivy</url>
   </organization>
 
   <properties>
