--- a/web-tester-fixture/config/variables.yaml
+++ b/web-tester-fixture/config/variables.yaml
@@ -1,3 +1,3 @@
-# yaml-language-server: $schema=https://json-schema.axonivy.com/app/12.0.0/variables.json
+# yaml-language-server: $schema=https://json-schema.axonivy.com/config/14.0.0/variables.json
 Variables:
   myVar: init
